- All the document strings are now written in both English and Japanese. - Added a script program to convert bilingual code to monolingual code. - Corrections on Japanese documents. - timemap.py: measure number in the MBT string is now mandatory.

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,14 @@
 __pycache__
 .ipynb_checkpoints/
+.pytest_cache/
 untracked/
 /dist/
 /docs/_build/
 /takt.egg-info/
 /takt/old/
 /takt/tests/scores
+/_en/
+/_ja/
 *.dll
 *.pyd
 *.so
