The package name is changed from 'takt' to 'pytakt'.

--- a/.gitignore
+++ b/.gitignore
@@ -4,9 +4,9 @@ __pycache__
 untracked/
 /dist/
 /docs/_build/
-/takt.egg-info/
-/takt/old/
-/takt/tests/scores
+/pytakt.egg-info/
+/pytakt/old/
+/pytakt/tests/scores
 /_en/
 /_ja/
 *.dll
