--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,27 +1,27 @@
-exclude takt/*.py
-include takt/__init__.py
-include takt/chord.py
-include takt/constants.py
-include takt/context.py
-include takt/effector.py
-include takt/event.py
-include takt/frameutils.py
-include takt/interpolator.py
-include takt/midiio.py
-include takt/m21conv.py
-include takt/mml.py
-include takt/pianoroll.py
-include takt/pitch.py
-include takt/pytakt.py
-include takt/sc.py
-include takt/scale.py
-include takt/score.py
-include takt/smf.py
-include takt/text.py
-include takt/timemap.py
-include takt/utils.py
-include takt/gm/__init__.py
-include takt/gm/drums.py
-include takt/src/Makefile
-include takt/src/*.h
-include takt/src/*.cpp
+exclude pytakt/*.py
+include pytakt/__init__.py
+include pytakt/chord.py
+include pytakt/constants.py
+include pytakt/context.py
+include pytakt/effector.py
+include pytakt/event.py
+include pytakt/frameutils.py
+include pytakt/interpolator.py
+include pytakt/midiio.py
+include pytakt/m21conv.py
+include pytakt/mml.py
+include pytakt/pianoroll.py
+include pytakt/pitch.py
+include pytakt/pytaktcmd.py
+include pytakt/sc.py
+include pytakt/scale.py
+include pytakt/score.py
+include pytakt/smf.py
+include pytakt/text.py
+include pytakt/timemap.py
+include pytakt/utils.py
+include pytakt/gm/__init__.py
+include pytakt/gm/drums.py
+include pytakt/src/Makefile
+include pytakt/src/*.h
+include pytakt/src/*.cpp
