- text.py: Fixed a bug that the 'play' and 'show' commands in end_score()   raise an exception. - text.py: The Python-evaluatable score now has a signature '#pytakt' with   a version number at the beginning of file.   readpyfile() fails if the signature is not found.

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,5 +1,6 @@
 exclude pytakt/*.py
 include pytakt/__init__.py
+include pytakt/_version.py
 include pytakt/chord.py
 include pytakt/constants.py
 include pytakt/context.py
